@@ -212,7 +212,7 @@ class NSW(Region):
             date = SmartDayArrow(year, month, day)
 
             if date.weekday() in ["saturday", "sunday"]:
-                date.shift_to_weekday("monday", including=True)
+                return date.shift_to_weekday("monday", including=True)
 
             return date
 
